# calchs

./: .gitignore  README.md  calchs.cabal
app/: Main.hs
src/: Calc.hs  Evaluator.hs  Lexer.hs  Parser.hs  Types.hs  Utils.hs
src/Calc/: Evaluator.hs  Interactive.hs  Lexer.hs  Parser.hs  Types.hs  Utils.hs
src/Calc/Interactive/: Key.hs  Runner.hs
test/: Main.hs  Test.hs
