cabal-version: 3.0
name:          calchs
version:       0.0.0.1

synopsis:      Command line calculator tool.
description:   A simple command line calculator tool.
license:       MIT
author:        Daniel Barenholz
maintainer:    hello@dbarenholz.com

common commonOptions
  ghc-options:      -Wall
  default-language: Haskell2010

library
  import:           commonOptions
  exposed-modules:  Lexer, Parser, Evaluator, Types, Utils
  hs-source-dirs:   src
  build-depends:
    base ^>= 4.17.2.0

executable calchs
  import:           commonOptions
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    base,
    calchs

test-suite test
  import:           commonOptions
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
    base,
    process ^>= 1.6.18.0, 
    calchs
